# genai-lib

./: .gitignore  README.md  llm_leaderboard.ipynb  pyproject.toml  requirements.txt  setup.py  vlm_tools.py
genai_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
llm_tools/: llm_tools.py  llms.ipynb
prompting_tools/: prompt.ipynb  prompter.py
rag_tools/: rag.ipynb  rag_tools.py
