[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-lib"
version = "0.1.0"
description = "A lightweight Generative AI library with LLM and prompting tools"
readme = "README.md"
authors = [{ name = "Suraj Patra", email = "suraj.patra@involead.com" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.20.0",
]
requires-python = ">=3.8"
